# rust_ev_verifier_gui_backend

./: .env  .gitignore  Cargo.toml  README.md  config.toml  env.example
src/: app_data.rs  main.rs  middlewares.rs  request.rs  response.rs  router.rs  subscriber.rs  test_request.rs
src/handler/: extract.rs  mod.rs  run.rs  send_file.rs
test_sripts/: curl_extract.sh  curl_init.sh  curl_reset.sh  curl_run.sh  curl_send_context.sh  curl_send_setup.sh  curl_status.sh  curl_until_extract.sh
