[package]
name = "rust_ev_verifier_gui_backend"
authors = ["Denis Morel"]
edition = "2021"
rust-version = "1.81"
repository = "https://github.com/de-mo/rust_ev_verifier_gui_backend"
version = "0.1.0"
license = "Apache-2.0"
readme = "README.md"
categories = ["cryptography", "mathematics"]
keywords = ["math", "e-voting", "crypto"]


[dependencies]
rust_ev_verifier_lib = "0.1.0"
#rust_ev_verifier_lib = { path = "../rust_ev_verifier_lib" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
lazy_static = "1"
strum = { version = "0.26", features = ["derive"] }
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
mime = "0.3"
tower-http = { version = "0.6", features = ["trace"] }
futures = "0.3"

[dev-dependencies]
tower = { version = "0.5.1", features = ["util"] }
http-body-util = "0.1.0"
